sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:9: error: '=' expected but ';' found.
  for (i<-0 to lgr-1){
^